--- a/custom_components/avion_mesh/manifest.json
+++ b/custom_components/avion_mesh/manifest.json
@@ -12,8 +12,7 @@
     "requirements": [
         "aiorun>=2022.11.1",
         "avionhttp>=2.0.7",
-        "avionmesh>=2.0.6",
-        "bleak>=0.21.0"
+        "avionmesh>=2.0.6"
     ],
     "version": "1.0.0"
 }
